Bug 1463581 - Signal enabled state changes also on UnregisterSink. r=jib

MozReview-Commit-ID: FDCO73SdBoL